fixed display issue for no of slides > 2

--- a/experiments/discon.html
+++ b/experiments/discon.html
@@ -39,7 +39,8 @@
             </center>
         </div>
 
-    <!-- touch training -->   
+<!--
+     touch training    
     <div class="slide" id="dotGame">
         <br><br><br><br><br><br><br>
         <center>
@@ -49,9 +50,10 @@
         <button type="button" onClick="this.blur(); showSlide('training')">Start Game!</font></button>
     </center>
 </div>
+-->
 
 
-<div class="slide" id="trainingDot"></div> 
+<!--<div class="slide" id="trainingDot"></div> -->
 
 <!-- The training slide. -->
 <div class="slide" id="intro">
