distribution of input slides for each trial and click response

--- a/experiments/discon.html
+++ b/experiments/discon.html
@@ -110,15 +110,15 @@ touch training
 
         <img id="Bear_straight" class="agent"  src="images/Bear_straight.png">  
 
-        <img id="item_l" class="item_l" src="">
+        <img id="item_l" class="item" src="">
 
         <img id="table_l" class="table_l" src="images/table_l.png">
 
-        <img id="item_m" class="item_m" src="">
+        <img id="item_m" class="item" src="">
 
         <img id="table_m" class="table_m" src="images/table_m.png">
 
-        <img id="item_r" class="item_r" src="">
+        <img id="item_r" class="item" src="">
 
         <img id="table_r" class="table_r" src="images/table_r.png">
 
