--- a/experiments/discon.html
+++ b/experiments/discon.html
@@ -70,7 +70,7 @@ touch training
 
                         </td>
                         <td>
-                            <img src="images/Bear_straight.png" style="position:absolute;TOP: 150px;LEFT: 390px;WIDTH: 200px;">
+                            <img src="images/agents/Bear_straight.png" style="position:absolute;TOP: 150px;LEFT: 390px;WIDTH: 200px;">
                         </td>
                         <td>
 
@@ -108,7 +108,19 @@ touch training
 
         <audio id="sound" src = ""></audio> 
 
-        <img id="Bear_straight" class="agent"  src="images/Bear_straight.png">  
+        <!--all agents-->
+        <img id="Bear_straight" class="agent"  src="images/agents/Bear_straight.png">  
+        <img id="Beaver_straight" class="agent"  src="images/agents/Beaver_straight.png"> 
+        <img id="Bunny_straight" class="agent"  src="images/agents/Bunny_straight.png"> 
+        <img id="Cat_straight" class="agent"  src="images/agents/Cat_straight.png"> 
+        <img id="Dog_straight" class="agent"  src="images/agents/Dog_straight.png"> 
+        <img id="Elephant_straight" class="agent"  src="images/agents/Elephant_straight.png"> 
+        <img id="Frog_straight" class="agent"  src="images/agents/Bear_straight.png"> 
+        <img id="Monkey_straight" class="agent"  src="images/agents/Monkey_straight.png"> 
+        <img id="Mouse_straight" class="agent"  src="images/agents/Mouse_straight.png"> 
+        <img id="Pig_straight" class="agent"  src="images/agents/Pig_straight.png"> 
+        <img id="Sheep_straight" class="agent"  src="images/agents/Sheep_straight.png"> 
+        <img id="Tiger_straight" class="agent"  src="images/agents/Tiger_straight.png"> 
 
         <img id="item_l" class="item" src="">
 
@@ -126,10 +138,21 @@ touch training
 
     <!--  transition slide-->
     <div class="slide" id="transition"> 
-        <div align="center" width="500px">   
-
-            <img id="Bear_transition" class="agent_transition"  src="images/Bear_transition.png">  
-
+        <div align="center" width="500px">
+            
+            <img id="Bear_transition" class="agent"  src="images/agents/Bear_transition.png">
+            <img id="Beaver_transition" class="agent"  src="images/agents/Beaver_transition.png">
+            <img id="Bunny_transition" class="agent"  src="images/agents/Bunny_transition.png">
+            <img id="Cat_transition" class="agent"  src="images/agents/Cat_transition.png">
+            <img id="Dog_transition" class="agent"  src="images/agents/Dog_transition.png">
+            <img id="Elephant_transition" class="agent"  src="images/agents/Elephant_transition.png">
+            <img id="Frog_transition" class="agent"  src="images/agents/Frog_transition.png">
+            <img id="Monkey_transition" class="agent"  src="images/agents/Monkey_transition.png">
+            <img id="Mouse_transition" class="agent"  src="images/agents/Mouse_transition.png">
+            <img id="Pig_transition" class="agent"  src="images/agents/Pig_transition.png">
+            <img id="Sheep_transition" class="agent"  src="images/agents/Sheep_transition.png">
+            <img id="Tiger_transition" class="agent"  src="images/agents/Tiger_transition.png">
+            
         </div>
     </div>
 
