agent change between trials, sound sourcing and playing work (except for trial > 3 but will work when we have actual categories for these trials), part of data submission completed

--- a/experiments/discon.html
+++ b/experiments/discon.html
@@ -4,7 +4,7 @@
     <head>
         <title>Learning words from animals</title>
         <script src="jquery-1.11.2.min.js"></script>
-        <script src="mmturkey.js"></script>
+        <script src="mmturkey-0.6.js"></script>
         <link rel="stylesheet" href="style.css" />
     </head>
 
@@ -140,18 +140,18 @@ touch training
     <div class="slide" id="transition"> 
         <div align="center" width="500px">
             
-            <img id="Bear_transition" class="agent"  src="images/agents/Bear_transition.png">
-            <img id="Beaver_transition" class="agent"  src="images/agents/Beaver_transition.png">
-            <img id="Bunny_transition" class="agent"  src="images/agents/Bunny_transition.png">
-            <img id="Cat_transition" class="agent"  src="images/agents/Cat_transition.png">
-            <img id="Dog_transition" class="agent"  src="images/agents/Dog_transition.png">
-            <img id="Elephant_transition" class="agent"  src="images/agents/Elephant_transition.png">
-            <img id="Frog_transition" class="agent"  src="images/agents/Frog_transition.png">
-            <img id="Monkey_transition" class="agent"  src="images/agents/Monkey_transition.png">
-            <img id="Mouse_transition" class="agent"  src="images/agents/Mouse_transition.png">
-            <img id="Pig_transition" class="agent"  src="images/agents/Pig_transition.png">
-            <img id="Sheep_transition" class="agent"  src="images/agents/Sheep_transition.png">
-            <img id="Tiger_transition" class="agent"  src="images/agents/Tiger_transition.png">
+            <img id="Bear_transition" class="agent_transition"  src="images/agents/Bear_transition.png">
+            <img id="Beaver_transition" class="agent_transition"  src="images/agents/Beaver_transition.png">
+            <img id="Bunny_transition" class="agent_transition"  src="images/agents/Bunny_transition.png">
+            <img id="Cat_transition" class="agent_transition"  src="images/agents/Cat_transition.png">
+            <img id="Dog_transition" class="agent_transition"  src="images/agents/Dog_transition.png">
+            <img id="Elephant_transition" class="agent_transition"  src="images/agents/Elephant_transition.png">
+<!--            <img id="Frog_transition" class="agent_transition"  src="images/agents/Frog_transition.png">-->
+            <img id="Monkey_transition" class="agent_transition"  src="images/agents/Monkey_transition.png">
+            <img id="Mouse_transition" class="agent_transition"  src="images/agents/Mouse_transition.png">
+            <img id="Pig_transition" class="agent_transition"  src="images/agents/Pig_transition.png">
+            <img id="Sheep_transition" class="agent_transition"  src="images/agents/Sheep_transition.png">
+            <img id="Tiger_transition" class="agent_transition"  src="images/agents/Tiger_transition.png">
             
         </div>
     </div>
