--- a/experiments/discon.html
+++ b/experiments/discon.html
@@ -115,7 +115,7 @@ touch training
         <img id="Cat_straight" class="agent"  src="images/agents/Cat_straight.png"> 
         <img id="Dog_straight" class="agent"  src="images/agents/Dog_straight.png"> 
         <img id="Elephant_straight" class="agent"  src="images/agents/Elephant_straight.png"> 
-        <img id="Frog_straight" class="agent"  src="images/agents/Bear_straight.png"> 
+        <img id="Frog_straight" class="agent"  src="images/agents/Frog_straight.png"> 
         <img id="Monkey_straight" class="agent"  src="images/agents/Monkey_straight.png"> 
         <img id="Mouse_straight" class="agent"  src="images/agents/Mouse_straight.png"> 
         <img id="Pig_straight" class="agent"  src="images/agents/Pig_straight.png"> 
@@ -146,7 +146,7 @@ touch training
             <img id="Cat_transition" class="agent_transition"  src="images/agents/Cat_transition.png">
             <img id="Dog_transition" class="agent_transition"  src="images/agents/Dog_transition.png">
             <img id="Elephant_transition" class="agent_transition"  src="images/agents/Elephant_transition.png">
-<!--            <img id="Frog_transition" class="agent_transition"  src="images/agents/Frog_transition.png">-->
+            <img id="Frog_transition" class="agent_transition"  src="images/agents/Frog_transition.png">
             <img id="Monkey_transition" class="agent_transition"  src="images/agents/Monkey_transition.png">
             <img id="Mouse_transition" class="agent_transition"  src="images/agents/Mouse_transition.png">
             <img id="Pig_transition" class="agent_transition"  src="images/agents/Pig_transition.png">
