remove tables and move objects further down

--- a/experiments/discon.html
+++ b/experiments/discon.html
@@ -78,19 +78,15 @@ touch training
 
                     <tr align="center" height="50px">
                         <td>
-                            <img src="images/car.png" style="position:absolute;TOP: 380px;LEFT: 240px;WIDTH: 110px;z-index:1;">
-                            <img src="images/table_l.png" style="position:absolute;TOP: 450px;LEFT: 200px;WIDTH: 180px;">
+                            <img src="images/car.png" style="position:absolute; BOTTOM: 240px;LEFT: 240px;WIDTH: 110px;z-index:1;">
                         </td>
 
                         <td> 
-                            <img src="images/cap.png" style="position:absolute;TOP: 360px;LEFT: 440px;WIDTH: 110px;z-index:1;">
-                            <img src="images/table_m.png" style="position:absolute;TOP: 450px;LEFT: 400px;WIDTH: 180px;">
+                            <img src="images/cap.png" style="position:absolute;BOTTOM: 240px;LEFT: 440px;WIDTH: 110px;z-index:1;">
                         </td>
 
                         <td>
-                            <img src="images/apple.png" style="position:absolute;TOP: 350px;LEFT: 630;WIDTH: 110px;z-index:1;">
-                            <img src="images/table_r.png" style="position:absolute;TOP: 450px;LEFT: 600px;WIDTH: 180px;">
-
+                            <img src="images/apple.png" style="position:absolute;BOTTOM: 240px;LEFT: 630;WIDTH: 110px;z-index:1;">
                         </td>
                     </tr>
                 </tbody>
@@ -124,15 +120,9 @@ touch training
 
         <img id="item_l" class="item" src="">
 
-        <img id="table_l" class="table_l" src="images/table_l.png">
-
         <img id="item_m" class="item" src="">
 
-        <img id="table_m" class="table_m" src="images/table_m.png">
-
         <img id="item_r" class="item" src="">
-
-        <img id="table_r" class="table_r" src="images/table_r.png">
 
     </div>
 
