images for all categories

--- a/experiments/discon.html
+++ b/experiments/discon.html
@@ -82,11 +82,11 @@ touch training
                         </td>
 
                         <td> 
-                            <img src="images/cap.png" style="position:absolute;BOTTOM: 240px;LEFT: 440px;WIDTH: 110px;z-index:1;">
+                            <img src="images/shoes.png" style="position:absolute;BOTTOM: 240px;LEFT: 440px;WIDTH: 110px;z-index:1;">
                         </td>
 
                         <td>
-                            <img src="images/apple.png" style="position:absolute;BOTTOM: 240px;LEFT: 630;WIDTH: 110px;z-index:1;">
+                            <img src="images/apple.png" style=" position:absolute;BOTTOM: 240px;LEFT: 630;WIDTH: 110px;z-index:1;">
                         </td>
                     </tr>
                 </tbody>
