add next button to novel item slide

--- a/experiments/discon.html
+++ b/experiments/discon.html
@@ -125,7 +125,9 @@ touch training
 
         <img id="item_r" class="item" src="">
 
-        <nextButton class ="button" type="button" id="next" style= "visibility:hidden" onclick= "this.blur(); experiment.next()"></nextButton>
+        <nextButton class ="button" type="button" id="next-input" style= "visibility:hidden" onclick= "this.blur(); experiment.train2()"></nextButton>
+        
+        <nextButton class ="button" type="button" id="next-novel" style= "visibility:hidden" onclick= "this.blur(); experiment.choice2()"></nextButton>
         
         <img class="background" id="background" src=""> 
 
