change novel words with each trial

--- a/experiments/discon.html
+++ b/experiments/discon.html
@@ -16,7 +16,7 @@
                 <img src="images/stanford.png" height="46" width="360" alt="Stanford University">
             </div>
             <p id='logo-text'>Stanford Language and Cognition Lab</p>
-            <p class="block-text">In this experiment, your task is to find out which thing the animal wants. The materials were designed for children. Even if they seem strange at times, we ask you to try to be as accurate as possible. You will hear sound, so please make sure your volume is turned on. The experiment takes about 4 - 6 minutes.</p>
+            <p class="block-text">In this experiment, your task is to find out which thing the animal wants. The materials were designed for children. Even if they seem strange at times, we ask you to try to be as accurate as possible.  The experiment takes about 4 - 6 minutes.</p>
             <button id="button" type="button" onClick="this.blur(); experiment.introAll();">Press to begin</button>
 
             <!-- Legal blurb that we're required to show. -->
@@ -45,13 +45,16 @@ touch training
                     <tbody>
                         <p class="block-text" id="text_introAll">
                         </p>
+                        <p class="block-text" id="text_introAll_2">
+                        </p>
+                        
 
                         <tr align="center" height="300px">
                             <td>
 
                             </td>
                             <td>
-                                <img src="images/agents/Bear_straight.png" style="position:absolute;TOP: 180px;LEFT: 390px;WIDTH: 200px;">
+                                <img src="images/agents/Bear_straight.png" style="position:absolute;TOP: 230px;LEFT: 390px;WIDTH: 200px;">
                             </td>
                             <td>
 
@@ -59,15 +62,15 @@ touch training
 
                         <tr align="center" height="50px">
                             <td>
-                                <img src="images/items_intro/bakery.png" style="position:absolute; BOTTOM: 240px;LEFT: 240px;WIDTH: 110px;z-index:1;">
+                                <img src="images/items_intro/bread.png" style="position:absolute; BOTTOM: 180px;LEFT: 240px;WIDTH: 110px;z-index:1;">
                             </td>
 
                             <td> 
-                                <img src="images/items_intro/pencil.png" style="position:absolute;BOTTOM: 240px;LEFT: 440px;WIDTH: 110px;z-index:1;">
+                                <img src="images/items_intro/pencil.png" style="position:absolute;BOTTOM: 180px;LEFT: 440px;WIDTH: 110px;z-index:1;">
                             </td>
 
                             <td>
-                                <img src="images/items_intro/tv.png" style=" position:absolute;BOTTOM: 240px;LEFT: 630;WIDTH: 110px;z-index:1;">
+                                <img src="images/items_intro/tv.png" style=" position:absolute;BOTTOM: 180px;LEFT: 630;WIDTH: 110px;z-index:1;">
                             </td>
                         </tr>
                     </tbody>
