add text on Next button

--- a/experiments/discon.html
+++ b/experiments/discon.html
@@ -16,7 +16,7 @@
                 <img src="images/stanford.png" height="46" width="360" alt="Stanford University">
             </div>
             <p id='logo-text'>Stanford Language and Cognition Lab</p>
-            <p class="block-text">In this experiment, your task is to find out which thing the animal wants. The materials were designed for children. Even if they seem strange at times, we ask you to try to be as accurate as possible.  The experiment takes about 4 - 6 minutes.</p>
+            <p class="block-text">In this experiment, your task is to find out which thing the animal wants. The materials were designed for children. Even if they seem strange at times, we ask you to try to be as accurate as possible.  The experiment takes about 8 - 10 minutes.</p>
             <button id="button" type="button" onClick="this.blur(); experiment.introAll();">Press to begin</button>
 
             <!-- Legal blurb that we're required to show. -->
@@ -110,9 +110,9 @@ touch training
 
             <img id="item_r" class="item" src="">
 
-            <nextButton class ="button" type="button" id="next-input" style= "visibility:hidden" onclick= "this.blur(); experiment.train2()"></nextButton>
+            <nextButton class ="button" type="button" id="next-input" style= "visibility:hidden" onclick= "this.blur(); experiment.train2()">Next</nextButton>
 
-            <nextButton class ="button" type="button" id="next-novel" style= "visibility:hidden" onclick= "this.blur(); experiment.choice2()"></nextButton>
+            <nextButton class ="button" type="button" id="next-novel" style= "visibility:hidden" onclick= "this.blur(); experiment.choice2()">Next</nextButton>
 
 
 
