fix unending loop error

--- a/experiments/discon.html
+++ b/experiments/discon.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css" />
     </head>
 
-    <body>
+<body>
         <!--<div id="progressbar" style="width: 200px;" align="center"></div>-->
         <!-- The instructions slide. -->
         <div class="slide" id="instructions">
@@ -19,10 +19,11 @@
             <p class="block-text">In this experiment, your task is to find out which thing the animal wants. The materials were designed for children. Even if they seem strange at times, we ask you to try to be as accurate as possible.  The experiment takes about 6 - 8 minutes.</p>
             <button id="button" type="button" onClick="this.blur(); experiment.introAll();">Press to begin</button>
 
-            <!-- Legal blurb that we're required to show. -->
+<!--             Legal blurb that we're required to show. -->
             <p class="block-text" id="legal">Legal information: By answering the following questions, you are participating in a study being performed by cognitive scientists in the Stanford Department of Psychology. If you have questions about this research, please contact Manuel Bohn at <a href="mailto://bohn@stanford.edu">bohn@stanford.edu</a>. You must be at least 18 years old to participate. Your participation in this research is voluntary. You may decline to answer any or all of the following questions. You may decline further participation, at any time, without adverse consequences. Your anonymity is assured; the researchers who have requested your participation will not receive any personal information about you.</p>
-        </div>
-
+        </div> 
+    
+    
         <!-- The training slide. -->
         <div class="slide" id="introAll">
             <div align="center" width="500px">
@@ -48,15 +49,15 @@
 
                         <tr align="center" height="50px">
                             <td>
-                                <img src="images/items_intro/bread.png" style="position:absolute; BOTTOM: 180px;LEFT: 240px;WIDTH: 110px;z-index:1;">
+                                <img src="images/bread.png" style="position:absolute; BOTTOM: 180px;LEFT: 240px;WIDTH: 110px;z-index:1;">
                             </td>
 
                             <td> 
-                                <img src="images/items_intro/pencil.png" style="position:absolute;BOTTOM: 180px;LEFT: 440px;WIDTH: 110px;z-index:1;">
+                                <img src="images/pencil.png" style="position:absolute;BOTTOM: 180px;LEFT: 440px;WIDTH: 110px;z-index:1;">
                             </td>
 
                             <td>
-                                <img src="images/items_intro/tv.png" style=" position:absolute;BOTTOM: 180px;LEFT: 630;WIDTH: 110px;z-index:1;">
+                                <img src="images/tv.png" style=" position:absolute;BOTTOM: 180px;LEFT: 630;WIDTH: 110px;z-index:1;">
                             </td>
                         </tr>
                     </tbody>
