--- a/experiments/discon.html
+++ b/experiments/discon.html
@@ -16,7 +16,7 @@
                 <img src="images/stanford.png" height="46" width="360" alt="Stanford University">
             </div>
             <p id='logo-text'>Stanford Language and Cognition Lab</p>
-            <p class="block-text">In this experiment, your task is to find out which thing the animal wants. The materials were designed for children. Even if they seem strange at times, we ask you to try to be as accurate as possible.  The experiment takes about 6 - 8 minutes.</p>
+            <p class="block-text">In this experiment, your task is to click on the things that the animals talk about. The materials were designed for children. Even if they seem strange at times, we ask you to try to be as accurate as possible.  The experiment takes about 6 - 8 minutes.</p>
             <button id="button" type="button" onClick="this.blur(); experiment.introAll();">Press to begin</button>
 
 <!--             Legal blurb that we're required to show. -->
@@ -135,7 +135,7 @@
             <br><br>
             <center>
                 <p id='logo-text'>Thank you for participating.</p>
-                <p id='logo-text'>In this study, we want to find out how people keep track of topics of conversations and how they use this to learn new words.</p>
+                <p id='logo-text'>In this study, we want to find out how people keep track of topics of conversations.</p>
             </center>
         </div>
         <!-- Include the <a href="experiment.html">JavaScript file for the experiment</a>. As written, that script immediately executes commands, so we include it here at the end of the HTML file to ensure that resources referenced by the script actually exist. For instance, one of the immediately executed commands is <code>showSlide("instructions")</code>. If we loaded experiment.js, say, in the <code>head</code> section, <code>showSlide("instructions")</code> would fail because the <code>instructions</code> slide doesn't exist yet. It is possible to load the script in <code>head</code> but you have to ensure that any immediately executed commands, if they rely on potentially uninitialized HTML elements, are _delayed_ until the page is ready, using either [window.onload][onload] or jQuery's more robust [$(document).ready()][domReady]  -->
