adult and kid css files

--- a/experiments/discon_look.html
+++ b/experiments/discon_look.html
@@ -5,7 +5,7 @@
         <title>Learning words from animals</title>
         <script src="jquery-1.11.2.min.js"></script>
         <script src="mmturkey-0.6.js"></script>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="style_adult.css" />
     </head>
 
 <body>
