--- a/experiments/discon_look_kid.html
+++ b/experiments/discon_look_kid.html
@@ -5,7 +5,7 @@
         <title>Learning words from animals</title>
         <script src="jquery-1.11.2.min.js"></script>
         <script src="mmturkey.js"></script>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="style_kid.css" />
     </head>
 
     <body>
