--- a/experiments/discon_look_kid.html
+++ b/experiments/discon_look_kid.html
@@ -148,8 +148,7 @@
         </div>
         <br><br>
         <center>
-            <p id='logo-text'>Thank you for participating.</p>
-            <p id='logo-text'>In this study, we want to find out how people keep track of topics of conversations.</p>
+            <p id='logo-text'>Thank you for participating!</p>
         </center>
     </div>
     <!-- Include the <a href="experiment.html">JavaScript file for the experiment</a>. As written, that script immediately executes commands, so we include it here at the end of the HTML file to ensure that resources referenced by the script actually exist. For instance, one of the immediately executed commands is <code>showSlide("instructions")</code>. If we loaded experiment.js, say, in the <code>head</code> section, <code>showSlide("instructions")</code> would fail because the <code>instructions</code> slide doesn't exist yet. It is possible to load the script in <code>head</code> but you have to ensure that any immediately executed commands, if they rely on potentially uninitialized HTML elements, are _delayed_ until the page is ready, using either [window.onload][onload] or jQuery's more robust [$(document).ready()][domReady]  -->
