--- a/experiments/discon_look_600_cat_vis.html
+++ b/experiments/discon_look_600_cat_vis.html
@@ -63,6 +63,41 @@
                     </tbody>
                 </table>
 
+                <button id="button" type="button" onClick="this.blur(); experiment.introCat();">Next</button>
+
+            </div>
+        </div>
+    
+    <!-- The training slide. -->
+        <div class="slide" id="introCat">
+            <div align="center" width="500px">
+                <p id='logo-text'>Instructions</p>
+                <table style="width:100%">
+                    <tbody>
+                        <p class="block-text" id="text_introCat">
+                        </p>
+
+
+                        <tr align="center" height="280px">
+                            <td>
+                                <img src="images/clothes.png" style="position:absolute;BOTTOM: 380px;LEFT: 100px; width: 300px">
+                            </td>
+                            <td>
+                                <img src="images/vehicles.png" style="position:absolute;BOTTOM: 380px;LEFT: 600px;width: 300px">
+                            </td>
+            
+                        <tr align="center" height="280px">
+                            <td>
+                                <img src="images/fruits.png" style="position:absolute; BOTTOM: 80px;LEFT: 100px;width: 300px">
+                            </td>
+
+                            <td> 
+                                <img src="images/animals.png" style="position:absolute;BOTTOM: 80px;LEFT: 600px;width: 300px">
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
                 <button id="button" type="button" onClick="this.blur(); experiment.intro();">Let's begin</button>
 
             </div>
@@ -141,7 +176,7 @@
         <!-- Include the <a href="experiment.html">JavaScript file for the experiment</a>. As written, that script immediately executes commands, so we include it here at the end of the HTML file to ensure that resources referenced by the script actually exist. For instance, one of the immediately executed commands is <code>showSlide("instructions")</code>. If we loaded experiment.js, say, in the <code>head</code> section, <code>showSlide("instructions")</code> would fail because the <code>instructions</code> slide doesn't exist yet. It is possible to load the script in <code>head</code> but you have to ensure that any immediately executed commands, if they rely on potentially uninitialized HTML elements, are _delayed_ until the page is ready, using either [window.onload][onload] or jQuery's more robust [$(document).ready()][domReady]  -->
         <!-- [onload]: https://developer.mozilla.org/en/DOM/window.onload -->
         <!-- [domReady]: http://api.jquery.com/ready/ -->
-        <script src="discon_look_600_category.js"></script>
+        <script src="discon_look_600_cat_vis.js"></script>
 
 
     </body>
