adding child order variable

--- a/experiments/discon_look_kid_simple_4cat.html
+++ b/experiments/discon_look_kid_simple_4cat.html
@@ -28,6 +28,11 @@
                 Enter subject age: <br>
                 <input type="text" id="subjectAge" name="subjectAge" size="30"> 
                 </center></p>
+            
+            <p class="block-text"><center>
+                Order: <br>
+                <input type="text" id="subjectOrder" name="subjectOrder" size="30"> 
+                </center></p>
 
             <br><br>
             <center>
