adult experiment, visual and name

--- a/experiments/discon_look_600_cat_name.html
+++ b/experiments/discon_look_600_cat_name.html
@@ -100,6 +100,17 @@
                                 </p>
                             </td>
                         </tr>
+                        <tr align="center" height="100px">
+                            <td>
+                                <p class="block-text" id="text_introCat_5" style = "position: absolute; BOTTOM: 420px; LEFT: 350px; font-size: 24px">
+                                </p>
+                            </td>
+
+                            <td>
+                                <p class="block-text" id="text_introCat_6" style = "position: absolute; BOTTOM: 420px; LEFT: 600px; font-size: 24px">
+                                </p>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
 
