--- a/experiments/discon_look_600_cat_vis.html
+++ b/experiments/discon_look_600_cat_vis.html
@@ -80,19 +80,29 @@
 
                         <tr align="center" height="280px">
                             <td>
-                                <img src="images/clothes.png" style="position:absolute;BOTTOM: 380px;LEFT: 100px; width: 300px">
+                                <img src="images/clothes.png" style="position:absolute;BOTTOM: 430px;LEFT: 150px; width: 250px">
                             </td>
                             <td>
-                                <img src="images/vehicles.png" style="position:absolute;BOTTOM: 380px;LEFT: 600px;width: 300px">
+                                <img src="images/vehicles.png" style="position:absolute;BOTTOM: 430px;LEFT: 600px;width: 250px">
                             </td>
             
                         <tr align="center" height="280px">
                             <td>
-                                <img src="images/fruits.png" style="position:absolute; BOTTOM: 80px;LEFT: 100px;width: 300px">
+                                <img src="images/furniture.png" style="position:absolute; BOTTOM: 210px;LEFT: 150px;width: 250px">
                             </td>
 
                             <td> 
-                                <img src="images/animals.png" style="position:absolute;BOTTOM: 80px;LEFT: 600px;width: 300px">
+                                <img src="images/animals.png" style="position:absolute;BOTTOM: 210px;LEFT: 600px;width: 250px">
+                            </td>
+                        </tr>
+                        
+                        <tr align="center" height="280px">
+                            <td>
+                                <img src="images/instruments.png" style="position:absolute; BOTTOM: -50px;LEFT: 150px;width: 250px">
+                            </td>
+
+                            <td> 
+                                <img src="images/fruits.png" style="position:absolute;BOTTOM: -50px;LEFT: 600px;width: 250px">
                             </td>
                         </tr>
                     </tbody>
