mumble mumble experiment

--- a/experiments/discon_look_600_cat_name.html
+++ b/experiments/discon_look_600_cat_name.html
@@ -175,8 +175,10 @@
 
             <img class="background" id="background2" src=""> 
             
-            <nextButton class ="button" type="button" id="next-trial" align="center" onclick="this.blur(); experiment.train();">Next</nextButton>
-
+            <!--after beginning slide of each trial-->
+            <nextButton class ="button" type="button" id="next-train" align="center" onclick="this.blur(); experiment.train();">Next</nextButton>
+            <!--after end slide of each trial-->
+            <nextButton class ="button" type="button" id="next-trial" align="center" onclick="this.blur(); experiment.intro();">Next</nextButton>
         </div>
 
 
