fix Bear image for speaker change experiment

--- a/experiments/discon_look_600_speakerchange.html
+++ b/experiments/discon_look_600_speakerchange.html
@@ -89,8 +89,8 @@
                 <img id="Pig_straight" class="agent"  src="images/agents/Pig_straight.png"> 
                 <img id="Sheep_straight" class="agent"  src="images/agents/Sheep_straight.png"> 
                 <img id="Tiger_straight" class="agent"  src="images/agents/Tiger_straight.png"> 
-                <img id="Bear_straight" class="agent"  src="images/agents/Bear_straight.png">  
                 
+                <img id="Bear_look_l" class="agent"  src="images/agents/Bear_look_l.png">  
                 <img id="Beaver_look_l" class="agent"  src="images/agents/Beaver_look_l.png"> 
                 <img id="Bunny_look_l" class="agent"  src="images/agents/Bunny_look_l.png"> 
                 <img id="Cat_look_l" class="agent"  src="images/agents/Cat_look_l.png"> 
