change location for the data to be sent to and intro

--- a/experiments/discon_look_kid_simple_4cat_speakerchange.html
+++ b/experiments/discon_look_kid_simple_4cat_speakerchange.html
@@ -4,7 +4,7 @@
     <head>
         <title>Learning words from animals</title>
         <script src="jquery-1.11.2.min.js"></script>
-        <script src="mmturkey.js"></script>
+        <script src="mmturkey_kids_speaker_change.js"></script>
         <link rel="stylesheet" href="style_kid.css" />
     </head>
 
